fix overflow

--- a/frontend/src/app/landing/landing.component.scss
+++ b/frontend/src/app/landing/landing.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: auto;
+  overflow: hidden;
 }
 .nav-link {
   font-size: 2rem;
