--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -55,6 +55,7 @@ body {
   color: #000;
   font-size: 1.6rem;
   font-weight: 400;
+  overflow-x: hidden;
 }
 .text-yellow {
   color: #ffc107 !important;
